--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -67,7 +67,7 @@ h3 {
 
 h1 {
     margin-top: 0;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     color: #FFF;
     opacity: 0.87;
     font-weight: 400;
@@ -100,15 +100,19 @@ h3 {
 }
 
 p {
-    margin-top: 30px;
+    margin-top: 15px;
+    margin-bottom: 30px;
     text-align: center;
     color: #FFF;
     opacity: 0.87;
     font-size: 28px;
+    white-space: nowrap;
 }
 
 p:last-child {
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 0px;
+
 }
 
 /* ----- ICONS ----- */
@@ -213,18 +217,19 @@ header {
     max-height: 400px;
     max-width: 400px;
     margin: 30px auto;
+    margin-top: 30px;
 }
 
 .msg-code-text {
     border-radius: 10px;
-    background: white;
-    color: black;
-    padding: 0px 20px;
+    background-color: rgba(1,1,1,0.54);
+    padding: 5px 20px;
 }
 
 .select-msg {
-    color: black;
-    font-weight: bold;
+    color: white;
+    font-weight: medium;
+    font-size: 24px;
 }
 
 .logo {
