--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -214,8 +214,8 @@ header {
     border-radius: 50%;
     height: auto;
     width: auto;
-    max-height: 400px;
-    max-width: 400px;
+    max-height: 50vh;
+    max-width: 50vw;
     margin: 30px auto;
     margin-top: 30px;
 }
@@ -224,6 +224,7 @@ header {
     border-radius: 10px;
     background-color: rgba(1,1,1,0.54);
     padding: 5px 20px;
+    white-space: nowrap;
 }
 
 .select-msg {
